# jgs-reference-skill

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  NOTICE  README.md  RELEASE-INFO.txt  SECURITY.md  SKILL.md  install.ps1  install.py  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: validate.yml
docs/: PACK-SPEC.md  SOURCE-VETTING.md  index.html  other-agents.md  skill-usage.md
templates/: PACK.yaml
tools/: build_pack.py  check_overlap.py  outline.py  pack_eval.py  validate_pack.py  vet_source.py
